@@ -1,5 +1,7 @@
 version 0.9.3 (yet unreleased)
 ------------------------------
+
+= conntrackd =
 o fix commit of confirmed expectations (reported by Nishit Shah)
 o fix double increment of counters in cache_update_force() (Niko Tyni)
 o nl_dump_handler must return NFCT_CB_CONTINUE (Niko Tyni)
@@ -27,6 +29,16 @@ o introduce 'Replicate' clause to explicitely set states to be replicated
 o kill cache feature abuse: introduce nicer cache hooks for sync algorithms
 o fix oversized buffer allocated in the stack in the cache functions
 o add support to dump internal/external cache in XML format '-x'
+
+= conntrack =
+o port conntrack to the new libnetfilter_conntrack API
+o introduce '--xml' option for '-L', '-G' and '-E'
+o deprecated '--id'
+o replace '-a' by '--src-nat' and '--dst-nat'
+o use positive logic in error handling
+o remove sctp support until is fully supported in the kernel side
+o update conntrack manpage
+o update test.sh file in examples/cli/
 
 version 0.9.2 (2006/01/17)
 --------------------------
